--- a/feather_metamers_conda_2022.yml
+++ b/feather_metamers_conda_2022.yml
@@ -6,6 +6,9 @@ channels:
 dependencies:
   - _libgcc_mutex=0.1=main
   - _pytorch_select=0.2=gpu_0
+  - pytorch=1.5.0
+  - torchaudio=0.5.1
+  - torchvision=0.6.1
   - attrs=19.3.0=py_0
   - backcall=0.1.0=py38_0
   - blas=1.0=mkl
@@ -94,7 +97,6 @@ dependencies:
   - pyrsistent=0.16.0=py38h7b6447c_0
   - python=3.8.2=hcf32534_0
   - python-dateutil=2.8.1=py_0
-  - pytorch=1.5.0=py3.8_cuda10.1.243_cudnn7.6.3_0
   - pytz=2020.1=py_0
   - pyzmq=18.1.1=py38he6710b0_0
   - qt=5.9.7=h5867ecd_1
@@ -113,8 +115,6 @@ dependencies:
   - testpath=0.4.4=py_0
   - threadpoolctl=2.1.0=pyh5ca1d4c_0
   - tk=8.6.8=hbc83047_0
-  - torchaudio=0.5.0=py38
-  - torchvision=0.6.0=py38_cu101
   - tornado=6.0.4=py38h7b6447c_1
   - traitlets=4.3.3=py38_0
   - wcwidth=0.1.9=py_0
@@ -127,25 +127,24 @@ dependencies:
   - zlib=1.2.11=h7b6447c_3
   - zstd=1.3.7=h0b5b093_0
   - pip:
-    - git+https://git@github.com/jenellefeather/chcochleagram.git
-    - cox==0.1.post3
-    - future==0.18.2
-    - gitdb==4.0.9
-    - gitpython==3.1.27
-    - grpcio==1.46.0
-    - llvmlite==0.38.0
-    - numba==0.55.1
-    - numexpr==2.8.1
-    - numpy==1.21.6
-    - packaging==21.3
-    - protobuf==3.20.1
-    - psutil==5.9.0
-    - py3nvml==0.2.7
-    - requests==2.27.1
-    - resampy==0.2.2
-    - smmap==5.0.0
-    - tables==3.6.1
-    - tensorboardx==2.5
-    - tqdm==4.64.0
-    - xmltodict==0.13.0
-
+      - git+https://git@github.com/jenellefeather/chcochleagram.git
+      - cox==0.1.post3
+      - future==0.18.2
+      - gitdb==4.0.9
+      - gitpython==3.1.27
+      - grpcio==1.46.0
+      - llvmlite==0.38.0
+      - numba==0.55.1
+      - numexpr==2.8.1
+      - numpy==1.21.6
+      - packaging==21.3
+      - protobuf==3.20.1
+      - psutil==5.9.0
+      - py3nvml==0.2.7
+      - requests==2.27.1
+      - resampy==0.2.2
+      - smmap==5.0.0
+      - tables==3.6.1
+      - tensorboardx==2.5
+      - tqdm==4.64.0
+      - xmltodict==0.13.0
