--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,15 +5,19 @@ description = "code from the paper"
 authors = ["Janelle Feather"]
 readme = "README.md"
 
+[virtualenvs]
+in-project = true
+prefer-active-python = true
+
 [tool.poetry.dependencies]
 jupyter = "^1.0.0"
 scipy = "^1.4"
 matplotlib = "^3.1"
 numpy = "*"
-torch = ">=2.0.0, !=2.0.1, !=2.1.0"
+# torch = ">=2.0.0, !=2.0.1, !=2.1.0"
 #torch = "^2.1.0"
-torchaudio = "^2.1.0"
-torchvision = "^0.16.0"
+# torchaudio = "^2.1.0"
+# torchvision = "^0.16.0"
 
 [tool.poetry.dev-dependencies]
 python = ">=3.8"
